[package]
name = "webhooks_handler"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
dotenvy = "0.15.7"
env_logger = "0.11.5"
eyre = "0.6.12"
log = "0.4.22"
oauth_fcm = "0.2.0"
serde = { version = "1.0.206", features = ["derive"] }
serde_json = "1.0.122"
tokio = { version = "1.39.2", features = ["full"] }
